--- a/css/main.css
+++ b/css/main.css
@@ -1,42 +1,44 @@
 * {
-	background: #100f0f;
 	scrollbar-width: none;
 	-ms-overflow-style: none;
 }
+::-webkit-scrollbar { background-color: transparent; width: 0; }
 
 a:link		{ color: white; }
 a:visited	{ color: gray; }
 a:hover		{ color: lightgray; }
 a:active	{ color: white; }
 
-html, body { height: 100%; margin: 0; }
 body {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	font-family: "Courier New", Courier, monospace;
+	background: #100f0f;
 	color: white;
+	font-family: "Courier New", Courier, monospace;
 }
 #content {
-	max-width: 768px; 
 	margin: 0 auto;
-	padding: 0 16px; 
+	max-width: 48em;
+    min-width: 24em;
+	padding: 0 4em; 
 }
-#header { text-align: center; }
-footer  { color: gray; margin-top: 16px; text-align: center; }
+#header { margin-top: 2em; text-align: center; }
+footer {
+    color: gray;
+    margin-bottom: 3em;
+    margin-top: 1em;
+    text-align: center;
+}
 nav { 
 	align-items: center;  
 	display: flex; 
 	justify-content: space-around; 
-	margin: 0 auto 32px; 
-	max-width: 768px; 
+	margin: 0 auto 2em; 
+	max-width: 48em;
+    min-width: 24em;
 	text-align: center;
 }
 
 code, h1, h2, p { text-align: justify; text-justify: inter-word; }
 code	{ color: gray; }
-h2		{ margin: 32px 0px 8px auto; }
-p		{ margin: 4px 32px 16px 32px; }
-
-::-webkit-scrollbar { background-color: transparent; width: 0; }
+h2		{ margin: 1em 0 0.75rem; }
+p		{ margin: 0 2em 1em 2em; }
 
