blog: init jekyll
must format

--- a/blog_src/_layouts/default.html
+++ b/blog_src/_layouts/default.html
@@ -1,3 +1,6 @@
+---
+---
+
 <!doctype html>
 <html lang="en-ie">
 
@@ -5,7 +8,7 @@
           https://notbyai.fyi/      -->
 
 <head>
-	<title></title>
+	<title>{{ page.title }}</title>
 	<base target="_blank" rel="noopener"/>
 
     <meta charset="utf-8"/>
@@ -59,16 +62,7 @@
 		</nav>
 
 		<main>
-			<h2>Posts</h2>
-<ul>
-	
-		<li>
-			<a href="/blog/2026/01/07/test.html" target="_self">test</a> — Jan 7, 2026
-		</li>
-	
-</ul>
-
-
+			{{ content }}
 		</main>
 
 		<footer>
