fix: add `links.js` for opening external domains in new tabs

--- a/blog_src/_layouts/default.html
+++ b/blog_src/_layouts/default.html
@@ -9,7 +9,7 @@
 
 <head>
 	<title>{{ page.title }}</title>
-	<base target="_blank" rel="noopener"/>
+	<script src="/assets/js/links.js" defer></script>
 
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -55,12 +55,12 @@
 			<a href="https://www.github.com/jackinfurs/" title="github.com/jackinfurs"><img src="/assets/icons/github.svg" style="width:30px; height:30px;" alt="jackinfurs on GitHub"/></a>
 			<a href="https://www.linkedin.com/in/jackinfurs/" title="linkedin.com/in/jackinfurs"><img src="/assets/icons/linkedin.svg" style="width:30px; height:30px;" alt="jackinfurs on LinkedIn"/></a>
 			<wbr/>
-			<a href="/" target="_self">home</a>
-			<a href="/music/" target="_self">music</a>
-			<a href="/blog/" target="_self"><strong>blog</strong></a>
+			<a href="/">home</a>
+			<a href="/music/">music</a>
+			<a href="/blog/"><strong>blog</strong></a>
 		</nav>
 
-		<main>
+		<main class="blog">
 			{{ content }}
 		</main>
 
