fix: change body font-size from 1rem to 0.85rem

--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,7 @@ body {
 	background: #100f0f;
 	color: lightgray;
 	font-family: "Courier New", Courier, monospace;
+	font-size: 0.85rem;
 }
 #content {
 	margin: 0 auto;
