--- a/blog_src/_layouts/default.html
+++ b/blog_src/_layouts/default.html
@@ -19,6 +19,7 @@
     <meta name="color-scheme" content="light"/>
     <meta name="darkreader-lock"/>
 
+	<link rel="icon" href="/favicon.ico"/>
 	<link rel="canonical" href="https://jackinfurs.ie/blog"/>
 	<link rel="preload stylesheet" as="style" type="text/css" href="/css/main.css"/>
 
