--- a/css/main.css
+++ b/css/main.css
@@ -48,3 +48,8 @@ code	{ color: gray; }
 h2		{ margin: 1em 0 0.75rem; }
 p		{ line-height: 1.25em; margin: 0 2em 1em 2em; }
 
+.player     { display: flex; justify-content: center; }
+#trackName  { min-width: 32ch; text-align: center; }
+#playPauseBtn, #nextBtn { cursor: pointer; font-weight: bold; }
+#playPauseBtn:hover, #nextBtn:hover { color: white; }
+
